--- a/public/pages/home-page.html
+++ b/public/pages/home-page.html
@@ -128,7 +128,7 @@
                     <canvas class="graph" id="myGraph" width="700" height="500"></canvas>
                 </div>
                 <app-ajax id="ajax"
-                          url="/api/employeeattendence"
+                          url="/api/employeeattendance"
                           method="GET"
                           on-core-response="{{homeResponse}}"
                           content-type="application/json"
